<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/user"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_user"
        app:layout_constraintStart_toEndOf="@id/iv_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_email"
        app:layout_constraintStart_toEndOf="@id/iv_user"
        app:layout_constraintTop_toBottomOf="@id/tv_user"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_edit"
        app:layout_constraintStart_toEndOf="@id/iv_user"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginStart="16dp"
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_delete"
        app:layout_constraintStart_toEndOf="@id/btn_edit"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:backgroundTint="@color/danger"
        android:layout_marginStart="16dp"
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>